# AnimationToolkit

./: .gitignore  CImgPlugin.h  CMakeLists.txt  README.md  config.h.in  crop-frames.cc
Crop Animation (Min Size PNG).workflow/Contents/: document.wflow
Crop Animation (One Size PNG).workflow/Contents/: document.wflow
Crop Animation (Same Box PNG).workflow/Contents/: document.wflow
Crop Animation Frames (Fixed Size).workflow/Contents/: document.wflow
Crop Animation Frames (Individually).workflow/Contents/: document.wflow
Crop Animation.workflow/Contents/: document.wflow
config/: Description.html  Description.md  FindFFmpeg.cmake  Macros.cmake
osx/Crop Animation Frames (Fixed Size).workflow/Contents/: document.wflow
osx/Crop Animation Frames (Individually).workflow/Contents/: document.wflow
scripts/: AE Export Spine JSON.jsx
src/: crop-frames.cc
